Uploaded new files

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <h4>TRENDS</h4>
             <div class="trend-item">
                 <h5>Well+Good</h5>
-                <img src="images/wellness trend.png" alt="Well-Good Article Image" width="200px"/>
+                <img src="images/wellness trend.png" alt="Well-Good Article Image" width="200px" height="300px"/>
                 <p>www.wellandgood.com</p>
             </div>
             <div class="trend-item">
@@ -79,7 +79,7 @@
      <!-- Quote section -->
     <div class="quote-section">
       <img src="images/sirkol.png" alt="Just Breathe Logo" class="just-breathe-logo" />
-      <p class="health-quote">“ The best investment you've ever make is your own <span class="health-word">HEALTH</span>”</p>
+      <p class="health-quote">“ The best investment you've ever make is <br> your own <span class="health-word">HEALTH</span>”</p>
     </div>
     <!-- footer -->
     <div class="footer">
